--- a/src/android/app/src/main/res/layout/list_item_setting.xml
+++ b/src/android/app/src/main/res/layout/list_item_setting.xml
@@ -9,60 +9,43 @@
     android:clickable="true"
     android:focusable="true"
     android:gravity="center_vertical"
-    android:minHeight="72dp"
-    android:padding="16dp">
+    android:minHeight="56dp"
+    android:padding="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="24dp"
-            android:layout_gravity="center_vertical"
-            android:visibility="gone"
-            app:tint="?attr/colorOnSurface" />
-
-        <LinearLayout
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/text_setting_name"
+            style="@style/TextAppearance.Material3.HeadlineMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:textAlignment="viewStart"
+            android:textSize="16sp"
+            app:lineHeight="22dp"
+            tools:text="Setting Name" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/text_setting_name"
-                style="@style/TextAppearance.Material3.HeadlineMedium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="viewStart"
-                android:textSize="17sp"
-                app:lineHeight="22dp"
-                tools:text="Setting Name" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/text_setting_description"
+            style="@style/TextAppearance.Material3.BodySmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
+            tools:text="@string/app_disclaimer" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/text_setting_description"
-                style="@style/TextAppearance.Material3.BodySmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:textAlignment="viewStart"
-                tools:text="@string/app_disclaimer" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/text_setting_value"
-                style="@style/TextAppearance.Material3.LabelMedium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:textAlignment="viewStart"
-                android:textStyle="bold"
-                android:textSize="13sp"
-                tools:text="1x" />
-
-        </LinearLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/text_setting_value"
+            style="@style/TextAppearance.Material3.LabelMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:text="1x" />
 
     </LinearLayout>
 
