--- a/src/android/app/src/main/res/layout/list_item_setting.xml
+++ b/src/android/app/src/main/res/layout/list_item_setting.xml
@@ -9,8 +9,8 @@
     android:clickable="true"
     android:focusable="true"
     android:gravity="center_vertical"
-    android:minHeight="56dp"
-    android:padding="8dp">
+    android:minHeight="72dp"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="24dp"
             android:layout_gravity="center_vertical"
             android:visibility="gone"
             app:tint="?attr/colorOnSurface" />
@@ -47,7 +47,7 @@
                 style="@style/TextAppearance.Material3.BodySmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:textAlignment="viewStart"
                 tools:text="@string/app_disclaimer" />
 
@@ -56,7 +56,7 @@
                 style="@style/TextAppearance.Material3.LabelMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:textAlignment="viewStart"
                 android:textStyle="bold"
                 android:textSize="13sp"
