Android & PC: Code rebase
This is a full code rebase (same base, but all got re-implemented way better than before and I considered some options as useless and didn't implement they back, as Sustained Perf Mode on android).

There are also some PabloMK7 updates applied, so I am adding him there

Co-Authored-By: PabloMK7 <10946643+pablomk7@users.noreply.github.com>

--- a/src/android/app/src/main/res/menu/menu_in_game.xml
+++ b/src/android/app/src/main/res/menu/menu_in_game.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_emulation_resume"
-        android:icon="@drawable/ic_play"
-        android:title="@string/resume_emulation" />
+        android:id="@+id/menu_emulation_pause"
+        android:icon="@drawable/ic_pause"
+        android:title="@string/pause_emulation" />
 
     <item
         android:id="@+id/menu_emulation_savestates"
@@ -16,11 +16,6 @@
         android:id="@+id/menu_overlay_options"
         android:icon="@drawable/ic_controller"
         android:title="@string/emulation_overlay_options" />
-
-    <item
-        android:id="@+id/menu_rotate_screen"
-        android:icon="@drawable/ic_fit_screen"
-        android:title="@string/emulation_rotate_screen" />
 
     <item
         android:id="@+id/menu_amiibo"
@@ -46,11 +41,6 @@
         android:id="@+id/menu_cheats"
         android:icon="@drawable/ic_code"
         android:title="@string/cheats" />
-
-    <item
-        android:id="@+id/menu_tweaks"
-        android:icon="@drawable/ic_stat_notification_logo"
-        android:title="@string/tweaks_title" />
 
     <item
         android:id="@+id/menu_settings"
