--- a/src/android/app/src/main/res/menu/menu_in_game.xml
+++ b/src/android/app/src/main/res/menu/menu_in_game.xml
@@ -29,7 +29,7 @@
 
     <item
         android:id="@+id/menu_portrait_screen_layout"
-        android:icon="@drawable/ic_fit_screen"
+        android:icon="@drawable/ic_portrait_fit_screen"
         android:title="@string/emulation_switch_portrait_layout" />
 
     <item
