--- a/src/android/app/src/main/res/menu/menu_landscape_screen_layout.xml
+++ b/src/android/app/src/main/res/menu/menu_landscape_screen_layout.xml
@@ -20,6 +20,10 @@
             android:title="@string/emulation_screen_layout_hybrid" />
 
         <item
+            android:id="@+id/menu_screen_layout_original"
+            android:title="@string/emulation_screen_layout_original" />
+
+        <item
             android:id="@+id/menu_screen_layout_custom"
             android:title="@string/emulation_screen_layout_custom" />
     </group>
