--- a/src/android/app/src/main/res/values/mandarine_colors.xml
+++ b/src/android/app/src/main/res/values/mandarine_colors.xml
@@ -229,7 +229,8 @@
     <color name="mandarine_onErrorContainer">#410002</color>
     <color name="mandarine_shadow">#000000</color>
     <color name="mandarine_scrim">#000000</color>
-    <!-- Values used in dark mode but here are jsut white / black values-->
+
+    <!-- Values used in dark mode but here are just white / black values-->
     <color name="mandarine_onPrimary_blue">#FFFFFF</color>
     <color name="mandarine_onSecondary_blue">#FFFFFF</color>
     <color name="mandarine_onTertiary_blue">#FFFFFF</color>
