--- a/src/android/app/src/main/res/menu/menu_navigation.xml
+++ b/src/android/app/src/main/res/menu/menu_navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/homeSettingsFragment"
-        android:icon="@drawable/ic_more"
+        android:icon="@drawable/ic_settings"
         android:title="@string/home_options" />
 
 </menu>
