Add max player count slider to room creation on Android

--- a/src/android/app/src/main/res/layout/dialog_multiplayer_room.xml
+++ b/src/android/app/src/main/res/layout/dialog_multiplayer_room.xml
@@ -86,6 +86,30 @@
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <LinearLayout
+        android:id="@+id/max_players_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/max_players"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:value="8"
+            android:valueFrom="2"
+            android:valueTo="16"
+            android:stepSize="1" />
+
+        <TextView
+            android:id="@+id/max_players_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/multiplayer_max_players_value" />
+    </LinearLayout>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_confirm"
         android:layout_width="wrap_content"
