home_navigation: Add ``SearchLocationFragment``

--- a/src/android/app/src/main/res/navigation/home_navigation.xml
+++ b/src/android/app/src/main/res/navigation/home_navigation.xml
@@ -94,4 +94,8 @@
         android:name="io.github.mandarine3ds.mandarine.fragments.DriverManagerFragment"
         android:label="DriverManagerFragment" />
 
+    <fragment 
+        android:id="@+id/searchLocationFragment"
+        android:name="io.github.borked3ds.android.fragments.SearchLocationFragment"
+        android:label="SearchLocationFragment" />
 </navigation>
