--- a/src/android/app/src/main/res/values/dimens.xml
+++ b/src/android/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="spacing_med">8dp</dimen>
     <dimen name="spacing_medlarge">12dp</dimen>
     <dimen name="spacing_large">16dp</dimen>
+    <dimen name="spacing_xlarge">24dp</dimen>
     <dimen name="spacing_fab_list">80dp</dimen>
     <dimen name="spacing_navigation">80dp</dimen>
     <dimen name="spacing_navigation_rail">0dp</dimen>
