android: Use correct icon for multiplayer in EmulationFragment

--- a/src/android/app/src/main/res/menu/menu_in_game.xml
+++ b/src/android/app/src/main/res/menu/menu_in_game.xml
@@ -54,7 +54,7 @@
 
     <item
         android:id="@+id/menu_multiplayer"
-        android:icon="@drawable/ic_network"
+        android:icon="@drawable/ic_multiplayer"
         android:title="@string/multiplayer" />
 
     <item
